<resources>
    <string name="app_name">ECommerceProj</string>
    <string name="mobile">MOBILE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="address">ADDRESS</string>
    <string name="email">EMAIL</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="invalid">Invalid</string>
    <string name="category">NINNYU\'S ECOMMERCE SHOP: Categories</string>
    <string name="subcategory">NINNYU\'S ECOMMERCE SHOP: SubCategory</string>
    <string name="productlist">NINNYU\'S ECOMMERCE SHOP: Product List</string>
    <string name="productdetails">NINNYU\'S ECOMMERCE SHOP: Product Details</string>
    <string name="productname">Product Name:</string>
    <string name="quantityInStock">In Stock:</string>
    <string name="price">Price:</string>
    <string name="desc">Description:</string>
    <string name="topsellers">TOP SELLERS</string>
    <string name="sellername">Seller Name:</string>
    <string name="sellerdeal">Seller\'s Deal:</string>
    <string name="sellerrating">Seller\'s Rating:</string>
    <string name="favorite">FAVORITES</string>
    <string name="addtofavorites">Add to Favorites</string>
    <string name="shoppingcart">SHOPPING CART</string>
    <string name="addtocart">Add to Cart</string>
    <string name="checkout">CHECKOUT</string>
    <string name="placeorder">PLACE ORDER</string>
    <string name="userprofile">YOUR ACCOUNT PROFILE</string>
    <string name="userid">User ID:</string>
    <string name="username">Your Name:</string>
    <string name="useraddress">Address:</string>
    <string name="useremail">Email:</string>
    <string name="usermobile">Mobile:</string>
    <string name="updateprofile">Update Profile</string>
    <string name="quantity">QUANTITY</string>
    <string name="quantitySmall">Quantity:</string>
    <string name="totalprice">Total Price:</string>
    <string name="remove">Remove</string>
    <string name="update">Update Item</string>

    <string name="userValidation">
        First and last name can only have letters and must be between 4 and 20 characters.
    </string>
    <string name="addressValidation">
        Address cannot have special characters.
    </string>
    <string name="emailValidation">
        Email cannot have special characters except \"_ - @\".
    </string>
    <string name="mobileValidation">
        Mobile number must have 10 numbers. No dashes or hyphens.
    </string>
    <string name="passwordValidation">
        Password must be between 5-20 characters and have at least one number, one capital letter, one lowercase letter, and one special character.
    </string>
    <string name="forgotpasswordTitle">
        Forgot Password?
    </string>
    <string name="forgotpasswordDesc">
        Enter the email associated with your account. You may login with the new password that will be sent to your email.
    </string>
    <string name="alertRegistrationSuccess">
        Registration Success
    </string>
    <string name="alertRegistrationSuccessMessage">
        You may login with your new account.
    </string>
    <string name="alertRegistrationFailed">
        Registration Failed
    </string>
    <string name="alertRegistrationFailedMessage">
        An account with that mobile number already exists. Please enter a different number.
    </string>
    <string name="loadingData">
        Loading data from the server…
    </string>
    <string name="serverNotResponding">
        Server is not responding…
    </string>
    <string name="alertTimeout">
        Session Timeout
    </string>
    <string name="alertTimeoutMessage">
        Please login again.
    </string>
    <string name="loggingin">
        Logging into the server…
    </string>
    <string name="alertWrongUser">Either the mobile number or password is wrong. Please try again…</string>
    <string name="registering">
        Registering new user…
    </string>
    <string name="alertUpdateSuccess">
        Profile Update Success
    </string>
    <string name="alertUpdateSuccessMessage">
        Your profile has been updated with the new information.
    </string>
    <string name="alertUpdateFailed">
        Profile Update Failed
    </string>
    <string name="alertUpdateFailedMessage">
        Your profile was not updated. The mobile number you entered was not found.
    </string>
</resources>
