<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.forgotpassword.ForgotPasswordActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_forgotpasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:text="@string/forgotpasswordTitle"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_forgotpasswordDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="50dp"
        android:text="@string/forgotpasswordDesc"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_forgotpasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/bt_forgotpasswordSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />
</LinearLayout>