<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.userprofile.updateprofile.UpdateProfileActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:text="@string/updateprofile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_updateFname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPersonName"
            android:hint="@string/fname"/>
        <EditText
            android:id="@+id/et_updateLname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="textPersonName"
            android:hint="@string/lname"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_updateUserValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/et_updateAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address"/>
    <TextView
        android:id="@+id/tv_updateAddressValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/et_upateEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <TextView
        android:id="@+id/tv_updateEmailValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/et_updateMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mobile"/>
    <TextView
        android:id="@+id/tv_updateMobileValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"/>
    <Button
        android:id="@+id/bt_updateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateprofile" />

</LinearLayout>