<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_above="@id/toolbar"
        android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_product"
                    android:layout_width="300dp"
                    android:layout_height="200dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp">
                    <TextView
                        android:id="@+id/tv_detailsName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="150dp"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_detailsQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_detailsName"
                        android:layout_marginStart="150dp"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_detailsPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_detailsQuantity"
                        android:layout_marginStart="150dp"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_detailsDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_detailsPrice"
                        android:layout_marginStart="150dp"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/productname"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantityInStock"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textSize="16sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/desc"
                            android:textSize="16sp" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/bt_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addtofavorites"/>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="50dp" />
                    <Button
                        android:id="@+id/bt_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addtocart"/>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="50dp" />
                    <EditText
                        android:id="@+id/et_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"/>
                </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>